--- a/client/src/scenes/loginPage/form.css
+++ b/client/src/scenes/loginPage/form.css
@@ -436,3 +436,19 @@ main.sign-up-mode .carousel {
   justify-content: space-between;
   height: 100%;
 }
+
+.prev__next__btn{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100%;
+  margin: 0 1rem;
+}
+/*make btn-wrap to be at bottom fixed*/
+.btn-wrap {
+  position: fixed;
+  bottom: 0;
+  
+ 
+  z-index: 100;
+}
